updated nav bar and a few things

--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
 		        <div id="navbar" class="navbar-collapse collapse">
 		          <ul class="nav navbar-nav navbar-right">
 		            <li class="active"><a href="#" data-nav-section="home"><span>Home</span></a></li>
-		            <li><a href="#" data-nav-section="about"><span>About</span></a></li>
-		            <li><a href="#" data-nav-section="services"><span>Services</span></a></li>
-		            <li><a href="#" data-nav-section="features"><span>Features</span></a></li>
-		            <li><a href="#" data-nav-section="testimonials"><span>Testimonials</span></a></li>
-		            <li><a href="#" data-nav-section="pricing"><span>Pricing</span></a></li>
-		            <li><a href="#" data-nav-section="press"><span>Press</span></a></li>
+		            <li><a href="#" data-nav-section="about"><span>What is cricket?</span></a></li>
+		            <li><a href="#" data-nav-section="services"><span>Motivation</span></a></li>
+		            <li><a href="#" data-nav-section="features"><span>Data Set</span></a></li>
+		            <li><a href="#" data-nav-section="testimonials"><span>Experiment</span></a></li>
+		            <li><a href="#" data-nav-section="pricing"><span>Results</span></a></li>
+		            <li><a href="#" data-nav-section="press"><span>References</span></a></li>
 		          </ul>
 		        </div>
 			    </nav>
@@ -219,16 +219,14 @@
 
 	<div id="slider" data-section="home">
 		<div class="owl-carousel owl-carousel-fullwidth">
-			<!-- You may change the background color here. -->
 		    <div class="item" style="background: #352f44;">
 		    	<div class="container" style="position: relative;">
 		    		<div class="row">
 					    <div class="col-md-7 col-sm-7">
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
-						    		<h1 class="fh5co-lead to-animate">Case Study Title</h1>
-									<h2 class="fh5co-sub-lead to-animate">100% Free Fully Responsive HTML5 Bootstrap Template. Crafted with love by the fine folks at <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></h3>
-									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">View Case Study</a></p>
+						    		<h1 class="fh5co-lead to-animate">EECS 349 Project: Indian Premier League Match Prediction</h1>
+									<h2 class="fh5co-sub-lead to-animate">Group Members: Aagam Shah, Michael Neuman</h2>
 						    	</div>
 						    </div>
 					    </div>
@@ -239,40 +237,9 @@
 		    		</div>
 		    	</div>
 		    </div>
-			<!-- You may change the background color here.  -->
-		    <div class="item" style="background: #38569f;">
-		    	<div class="container" style="position: relative;">
-		    		<div class="row">
-		    			<div class="col-md-7 col-md-push-1 col-md-push-5 col-sm-7 col-sm-push-1 col-sm-push-5">
-			    			<div class="fh5co-owl-text-wrap">
-						    	<div class="fh5co-owl-text">
-						    		<h1 class="fh5co-lead to-animate">Case Study Title</h1>
-									<h2 class="fh5co-sub-lead to-animate">100% Free Fully Responsive HTML5 Bootstrap Template. Crafted with love by the fine folks at <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></h3>
-									<p class="to-animate-2"><a href="#" class="btn btn-primary btn-lg">View Case Study</a></p>
-						    	</div>
-						    </div>
-					    </div>
-					    <div class="col-md-4 col-md-pull-7 col-sm-4 col-sm-pull-7 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/iphone-1.png" alt="Free HTML5 Template by FREEHTML5.co"></div>
-					    </div>
-
-		    		</div>
-		    	</div>
-		    </div>
-
 		    <div class="item" style="background-image:url(images/slide_5.jpg)">
 		    	<div class="overlay"></div>
 		    	<div class="container" style="position: relative;">
-		    		<div class="row">
-		    			<div class="col-md-8 col-md-offset-2 text-center">
-		    				<div class="fh5co-owl-text-wrap">
-						    	<div class="fh5co-owl-text">
-		    						<h1 class="fh5co-lead to-animate">Grab it now for free!</h1>
-									<h2 class="fh5co-sub-lead to-animate">100% Free Fully Responsive HTML5 Bootstrap Template. Crafted with love by the fine folks at <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></h3>
-									<p class="to-animate-2"><a href="http://freehtml5.co/" target="_blank" class="btn btn-primary btn-lg">Download This Template</a></p>
-								</div>
-							</div>
-		    			</div>
 		    		</div>
 		    	</div>
 		    </div>
@@ -284,70 +251,10 @@
 		<div class="container">
 			<div class="row row-bottom-padded-lg" id="about-us">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="to-animate">About Us</h2>
+					<h2 class="to-animate">What is cricket?</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 to-animate">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-8 to-animate">
-					<img src="images/img_1.jpg" class="img-responsive img-rounded" alt="Free HTML5 Template">
-				</div>
-				<div class="col-md-4 to-animate">
-					<h2>How we got started</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
-					<p>It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day.</p>
-					<p><a href="#" class="btn btn-primary">Meet the team</a></p>
-				</div>
-			</div>
-			<div class="row" id="team">
-				<div class="col-md-12 section-heading text-center to-animate">
-					<h2>Team</h2>
-				</div>
-				<div class="col-md-12">
-					<div class="row row-bottom-padded-lg">
-						<div class="col-md-4 text-center to-animate">
-							<div class="person">
-								<img src="images/person2.jpg" class="img-responsive img-rounded" alt="Person">
-								<h3 class="name">John Doe</h3>
-								<div class="position">Web Developer</div>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
-								<ul class="social social-circle">
-									<li><a href="#"><i class="icon-twitter"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin"></i></a></li>
-									<li><a href="#"><i class="icon-instagram"></i></a></li>
-									<li><a href="#"><i class="icon-github"></i></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-4 text-center to-animate">
-							<div class="person">
-								<img src="images/person3.jpg" class="img-responsive img-rounded" alt="Person">
-								<h3 class="name">Rob Smith</h3>
-								<div class="position">Web Designer</div>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
-								<ul class="social social-circle">
-									<li><a href="#"><i class="icon-twitter"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin"></i></a></li>
-									<li><a href="#"><i class="icon-instagram"></i></a></li>
-									<li><a href="#"><i class="icon-dribbble"></i></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-4 text-center to-animate">
-							<div class="person">
-								<img src="images/person4.jpg" class="img-responsive img-rounded" alt="Person">
-								<h3 class="name">John Doe</h3>
-								<div class="position">Photographer</div>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
-								<ul class="social social-circle">
-									<li><a href="#"><i class="icon-twitter"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin"></i></a></li>
-									<li><a href="#"><i class="icon-instagram"></i></a></li>
-									<li><a href="#"><i class="icon-github"></i></a></li>
-								</ul>
-							</div>
+							<h3>Here is a brief description of how the game of cricket is played.</h3>
 						</div>
 					</div>
 				</div>
@@ -358,10 +265,10 @@
 		<div class="container">
 			<div class="row row-bottom-padded-sm">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="to-animate">Our Services</h2>
+					<h2 class="to-animate">Motivation</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 to-animate">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
+							<h3>Here were our reasons for pursuing a highly accurate match result prediction model.</h3>
 						</div>
 					</div>
 				</div>
@@ -370,12 +277,12 @@
 				<div class="col-md-4">
 					<div class="box to-animate">
 						<div class="icon colored-1"><span><i class="icon-mustache"></i></span></div>
-						<h3>100% free</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+						<h3>GROWING</h3>
+						<p>The Indian Premier League is growing in size. Currently there are</p>
 					</div>
 					<div class="box to-animate">
 						<div class="icon colored-4"><span><i class="icon-heart"></i></span></div>
-						<h3>Made with love</h3>
+						<h3>AUDIENCE</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 					</div>
 				</div>
