title + working on motivation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Crew &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>EECS 349 &mdash; Indian Premier League Match Prediction</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -242,10 +242,8 @@
 		    	<div class="container" style="position: relative;">
 		    		</div>
 		    	</div>
-		    </div>
-
-		</div>
-	</div>
+		   </div>
+        </div>
 	
 	<div id="fh5co-about-us" data-section="about">
 		<div class="container">
@@ -276,14 +274,14 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="box to-animate">
-						<div class="icon colored-1"><span><i class="icon-mustache"></i></span></div>
+						<div class="icon colored-1"><span><i class="icon-user"></i></span></div>
 						<h3>GROWING</h3>
-						<p>The Indian Premier League is growing in size. Currently there are</p>
+						<p>The Indian Premier League is growing in size. The 2017 season featured 8 teams and the 2018 season will feature 10 teams.</p>
 					</div>
 					<div class="box to-animate">
-						<div class="icon colored-4"><span><i class="icon-heart"></i></span></div>
+						<div class="icon colored-4"><span><i class="icon-screen-desktop"></i></span></div>
 						<h3>AUDIENCE</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<p>Broadcasts of the first three matches of the 2017 Indian Premier League season reached over 185 million viewers.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
