--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 		        <div class="navbar-header">
 		        	<!-- Mobile Toggle Menu Button -->
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-		          	<a class="navbar-brand" href="index.html">Crew</a> 
+		          	<a class="navbar-brand" href="index.html">Indian Premier League Match Prediction</a> 
 		        </div>
 		        <div id="navbar" class="navbar-collapse collapse">
 		          <ul class="nav navbar-nav navbar-right">
@@ -274,106 +274,43 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="box to-animate">
-						<div class="icon colored-1"><span><i class="icon-user"></i></span></div>
-						<h3>GROWING</h3>
-						<p>The Indian Premier League is growing in size. The 2017 season featured 8 teams and the 2018 season will feature 10 teams.</p>
+						<div class="icon colored-2"><span><i class="icon-user"></i></span></div>
+						<h3>USEFUL FOR ALL FANS</h3>
+						<p>Whether you are a passionate fan of an individual team or a general Indian Premier League, match prediction results can give further insights into a team's strengths and weaknesses</p>
 					</div>
 					<div class="box to-animate">
 						<div class="icon colored-4"><span><i class="icon-screen-desktop"></i></span></div>
-						<h3>AUDIENCE</h3>
-						<p>Broadcasts of the first three matches of the 2017 Indian Premier League season reached over 185 million viewers.</p>
+						<h3>POPULARITY</h3>
+						<p>Broadcasts of the first three matches of the 2017 Indian Premier League season reached over 185 million viewers. The upcoming 2018 season will feature 10 teams.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="box to-animate">
-						<div class="icon colored-2"><span><i class="icon-screen-desktop"></i></span></div>
-						<h3>Fully responsive</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-					</div>
-					<div class="box to-animate">
-						<div class="icon colored-5"><span><i class="icon-rocket"></i></span></div>
-						<h3>Fast &amp; light</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+						<div class="icon colored-1"><span><i class="icon-money"></i></span></div>
+						<h3>MONETARY</h3>
+						<p>The Indian Premier League contributed over $180 million of India's Gross Domestic Product in 2015 and the Cricket betting markets have continued to grow. Match prediction results are of highest importance in this market.</p>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="box to-animate">
-						<div class="icon colored-3"><span><i class="icon-eye"></i></span></div>
-						<h3>Retina-ready</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-					</div>
-					<div class="box to-animate">
-						<div class="icon colored-6"><span><i class="icon-user"></i></span></div>
-						<h3>For creative like you!</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	
 	<div id="fh5co-features" data-section="features">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="single-animate animate-features-1">Features</h2>
+					<h2 class="single-animate animate-features-1">Data Set</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 single-animate animate-features-2">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
+							<h3>Our data set contains match results from the past 9 Indian Premier League Seasons...</h3>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="row row-bottom-padded-sm">
-				<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-service to-animate">
-					<div class="fh5co-icon"><i class="icon-present"></i></div>
-					<div class="fh5co-desc">
-						<h3>100% Free</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-					</div>	
-				</div>
-				<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-service to-animate">
-					<div class="fh5co-icon"><i class="icon-eye"></i></div>
-					<div class="fh5co-desc">
-						<h3>Retina Ready</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-					</div>
-				</div>
-				<div class="clearfix visible-sm-block visible-xs-block"></div>
-				<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-service to-animate">
-					<div class="fh5co-icon"><i class="icon-crop"></i></div>
-					<div class="fh5co-desc">
-						<h3>Fully Responsive</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-					</div>
-				</div>
-				<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-service to-animate">
-					<div class="fh5co-icon"><i class="icon-speedometer"></i></div>
-					<div class="fh5co-desc">
-						<h3>Lightweight</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-					</div>	
-				</div>
-				<div class="clearfix visible-sm-block visible-xs-block"></div>
-				<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-service to-animate">
-					<div class="fh5co-icon"><i class="icon-heart"></i></div>
-					<div class="fh5co-desc">
-						<h3>Made with Love</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-					</div>
-				</div>
-				<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-service to-animate">
-					<div class="fh5co-icon"><i class="icon-umbrella"></i></div>
-					<div class="fh5co-desc">
-						<h3>Eco Friendly</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-					</div>
-				</div>
 				<div class="clearfix visible-sm-block visible-xs-block"></div>
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 single-animate animate-features-3">
-					<a href="#" class="btn btn-primary btn-block">Learn More</a>
+					<a href="https://www.kaggle.com/manasgarg/ipl/downloads/matches.csv" class="btn btn-primary btn-block">Link to data set</a>
 				</div>
 			</div>
 		</div>
