--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 					<h2 class="single-animate animate-features-1">Data Set</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 single-animate animate-features-2">
-							<h3>Our data set contains match results from the past 9 Indian Premier League Seasons...</h3>
+							<h3>Our data set was found from cricsheet.org and contains match results from the past 9 Indian Premier League Seasons.</h3>
 						</div>
 					</div>
 				</div>
@@ -310,7 +310,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 single-animate animate-features-3">
-					<a href="https://www.kaggle.com/manasgarg/ipl/downloads/matches.csv" class="btn btn-primary btn-block">Link to data set</a>
+					<a href="https://www.kaggle.com/manasgarg/ipl" class="btn btn-primary btn-block">Link to data set</a>
 				</div>
 			</div>
 		</div>
