--- a/index.html
+++ b/index.html
@@ -312,7 +312,8 @@
 				<div class="col-md-4 col-md-offset-4 single-animate animate-features-3">
 					<a href="https://www.kaggle.com/manasgarg/ipl" class="btn btn-primary btn-block">Link to data set</a>
 				</div>
-			</div>
+			</div>f
+        
 		</div>
 	</div>
 
