--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 					<h2 class="to-animate">Motivation</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 to-animate">
-							<h3>Here were our reasons for pursuing a highly accurate match result prediction model.</h3>
+							<h3>Why did we decide to build our match predicting model?</h3>
 						</div>
 					</div>
 				</div>
@@ -276,15 +276,17 @@
 					<div class="box to-animate">
 						<div class="icon colored-2"><span><i class="icon-user"></i></span></div>
 						<h3>USEFUL FOR ALL FANS</h3>
-						<p>Whether you are a passionate fan of an individual team or a general Indian Premier League, match prediction results can give further insights into a team's strengths and weaknesses</p>
+						<p>Whether you are a super passionate fan who likes to crunch all the numbers or just someone who enjoys watching the sport of Cricket, match prediction results can provide many helpful insights into a team's strengths and weaknesses.</p>
 					</div>
-					<div class="box to-animate">
+                </div>
+                <div class="col-md-4">	
+                    <div class="box to-animate">
 						<div class="icon colored-4"><span><i class="icon-screen-desktop"></i></span></div>
 						<h3>POPULARITY</h3>
-						<p>Broadcasts of the first three matches of the 2017 Indian Premier League season reached over 185 million viewers. The upcoming 2018 season will feature 10 teams.</p>
+						<p>Despite only being around since 2008, the Indian Premier League is one of India's most watched spectacles of entertainment. Broadcasts of the first three matches of the 2017 Indian Premier League season reached over 185 million viewers.</p>
 					</div>
-				</div>
-				<div class="col-md-4">
+                </div>
+                <div class="col-md-4">	
 					<div class="box to-animate">
 						<div class="icon colored-1"><span><i class="icon-money"></i></span></div>
 						<h3>MONETARY</h3>
@@ -541,23 +543,6 @@
 		</div>
 	</footer>
 	
-	
-	<!-- For demo purposes Only ( You may delete this anytime :-) -->
-	<div id="colour-variations">
-		<a class="option-toggle"><i class="icon-gear"></i></a>
-		<h3>Preset Colors</h3>
-		<ul>
-			<li><a href="javascript: void(0);" data-theme="style"></a></li>
-			<li><a href="javascript: void(0);" data-theme="pink"></a></li>
-			<li><a href="javascript: void(0);" data-theme="blue"></a></li>
-			<li><a href="javascript: void(0);" data-theme="turquoise"></a></li>
-			<li><a href="javascript: void(0);" data-theme="orange"></a></li>
-			<li><a href="javascript: void(0);" data-theme="lightblue"></a></li>
-			<li><a href="javascript: void(0);" data-theme="brown"></a></li>
-			<li><a href="javascript: void(0);" data-theme="green"></a></li>
-		</ul>
-	</div>
-	<!-- End demo purposes only -->
 
 	
 	<!-- jQuery -->
