--- a/index.html
+++ b/index.html
@@ -219,28 +219,35 @@
 
 	<div id="slider" data-section="home">
 		<div class="owl-carousel owl-carousel-fullwidth">
-		    <div class="item" style="background: #352f44;">
+		    <div class="item" style="background-image:url(images/cricket_main_background.jpg">
 		    	<div class="container" style="position: relative;">
 		    		<div class="row">
 					    <div class="col-md-7 col-sm-7">
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text">
 						    		<h1 class="fh5co-lead to-animate">EECS 349 Project: Indian Premier League Match Prediction</h1>
-									<h2 class="fh5co-sub-lead to-animate">Group Members: Aagam Shah, Michael Neuman</h2>
 						    	</div>
 						    </div>
 					    </div>
-					    <div class="col-md-4 col-md-push-1 col-sm-4 col-sm-push-1 iphone-image">
-					    	<div class="iphone to-animate-2"><img src="images/iphone-2.png" alt="Free HTML5 Template by FREEHTML5.co"></div>
-					    </div>
-
 		    		</div>
 		    	</div>
 		    </div>
-		    <div class="item" style="background-image:url(images/slide_5.jpg)">
+		    <div class="item" style="background-image:url(images/cricket_alt_background.jpg)">
 		    	<div class="overlay"></div>
 		    	<div class="container" style="position: relative;">
-		    		</div>
+                    <div class="row">
+                        <div class="col-md-7 col-sm-7">
+                            <div class="fh5co-owl-text-wrap">
+						    	<div class="fh5co-owl-text">
+                                    <h1 class="fh5co-lead to-animate">Project Team Members:</h1>
+                                    <h2 class="fh5co-lead to-animate">Aagam Shah</h2>
+                                    <h3 class="fh5co-lead to-animate">Michael Neuman</h3>
+                                    <h4 class="fh5co-sub-lead to-animate">We would also like to thank all our classmates who peer reviewed our project.</h4>
+						    	</div>
+						    </div>
+					    </div>
+		    		</div>	
+                </div>
 		    	</div>
 		   </div>
         </div>
@@ -303,7 +310,8 @@
 					<h2 class="single-animate animate-features-1">Data Set</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 single-animate animate-features-2">
-							<h3>Our data set contains match results from the past 9 Indian Premier League Seasons...</h3>
+							<h3>Our data set contains match results from the past 9 Indian Premier League Seasons. There is an instance for every single over of a given cricket match. Statistics are broken down into
+                            multiple categories</h3>
 						</div>
 					</div>
 				</div>
