--- a/index.html
+++ b/index.html
@@ -259,8 +259,11 @@
 				<div class="col-md-12 section-heading text-center">
 					<h2 class="to-animate">What is cricket?</h2>
 					<div class="row">
+                        <img src="images/wikipedia_generic_cricket_pic.JPG" style="width: 50%; height: 350px;"><img src="images/mumbai_championship_espn.jpg" style="transform: scaleX(-1); width: 50%; height: 350px;">
+                        </div>
+                    <div class="row">
 						<div class="col-md-8 col-md-offset-2 to-animate">
-							<h3>Here is a brief description of how the game of cricket is played.</h3>
+                            <p><br/>Cricket is a game played between two eleven player teams using a bat and a ball. Players score runs by running between two sets of wooden posts called <a href="https://en.wikipedia.org/wiki/Wicket">wickets</a>.</p>
 						</div>
 					</div>
 				</div>
@@ -430,15 +433,57 @@
 				</div>
 			</div>
 			<div class="row">
-                <table style="width:100%; background-color: white; border: 1px solid #dddddd; border-collapse: collapse;">
-                                <col width="20%">
-                                <col width="20%">
-                                <col width="60%">
-                              <tr >
-                                <th>Attribute</th>
-                                <th>Description</th> 
-                                <th>Possible Input Values</th>
-                              </tr>
+                <table align="center" style="width:50%; background-color: white; text-align: center; border: 1px solid #dddddd; border-collapse: collapse;">
+                    <col width="50%">
+                    <col width="50%">
+                      <tr>
+                        <th style="text-align:center;">Team1 Value</th>
+                        <th style="text-align:center;">Number of Instances</th> 
+                      </tr>
+                    <tr>
+                        <td>Chennai Super Kings</td>
+                        <td>2990</td>
+                    </tr>
+                    <tr style="background-color: #dddddd">
+                        <td>Deccan Chargers</td>
+                        <td>1679</td>
+                    </tr>
+                    <tr>
+                        <td>Delhi Daredevils</td>
+                        <td>2087</td>
+                    </tr>
+                    <tr style="background-color: #dddddd">
+                        <td>Gujarat Lions</td>
+                        <td>231</td>
+                    </tr>
+                    <tr>
+                        <td>Kolkata Knight Riders</td>
+                        <td>2342</td>
+                    </tr>
+                    <tr style="background-color: #dddddd">
+                        <td>Kings XI Punjab</td>
+                        <td>2634</td>
+                    </tr>
+                    <tr>
+                        <td>Mumbai Indians</td>
+                        <td>2967</td>
+                    </tr>
+                    <tr style="background-color: #dddddd">
+                        <td>Pune Warriors</td>
+                        <td>777</td>
+                    </tr>
+                    <tr>
+                        <td>Royal Challengers Bangalore</td>
+                        <td>2349</td>
+                    </tr>
+                    <tr style="background-color: #dddddd">
+                        <td>Rajasthan Royals</td>
+                        <td>2082</td>
+                    </tr>
+                    <tr>
+                        <td>Sunrisers Hyderabad</td>
+                        <td>1416</td>
+                    </tr>
                 </table>
 			</div>
 		</div>
