--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
 		        </div>
 		        <div id="navbar" class="navbar-collapse collapse">
 		          <ul class="nav navbar-nav navbar-right">
-		            <li class="active"><a href="#" data-nav-section="home"><span>Home</span></a></li>
-		            <li><a href="#" data-nav-section="about"><span>What is cricket?</span></a></li>
+		            <li class="active"><a href="#" data-nav-section="home"><span>Top of Page</span></a></li>
+		            <li><a href="#" data-nav-section="about"><span>Overview</span></a></li>
 		            <li><a href="#" data-nav-section="services"><span>Motivation</span></a></li>
 		            <li><a href="#" data-nav-section="features"><span>Data Set</span></a></li>
 		            <li><a href="#" data-nav-section="testimonials"><span>Experiment</span></a></li>
@@ -257,7 +257,7 @@
 		<div class="container">
 			<div class="row row-bottom-padded-lg" id="about-us">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="to-animate">What is cricket?</h2>
+					<h2 class="to-animate">Overview</h2>
 					<div class="row">
                         <img src="images/wikipedia_generic_cricket_pic.JPG" style="width: 50%; height: 350px;"><img src="images/mumbai_championship_espn.jpg" style="transform: scaleX(-1); width: 50%; height: 350px;">
                         </div>
@@ -435,61 +435,62 @@
                             we used one instance from each match (inning 2, over 14) to train our model. We then used the remaining instances to test the accuracy of our model.</p>
 						</div>
 					</div>
+                    <table align="center" style="width:50%; background-color: white; text-align: center; border: 1px solid #dddddd; border-collapse: collapse;">
+                        <col width="50%">
+                        <col width="50%">
+                          <tr style="background-color: #dddddd">
+                            <th style="text-align:center;">Team1 Value</th>
+                            <th style="text-align:center;">Number of Instances</th> 
+                          </tr>
+                        <tr>
+                            <td>Chennai Super Kings</td>
+                            <td>2990</td>
+                        </tr>
+                        <tr style="background-color: #dddddd">
+                            <td>Deccan Chargers</td>
+                            <td>1679</td>
+                        </tr>
+                        <tr>
+                            <td>Delhi Daredevils</td>
+                            <td>2087</td>
+                        </tr>
+                        <tr style="background-color: #dddddd">
+                            <td>Gujarat Lions</td>
+                            <td>231</td>
+                        </tr>
+                        <tr>
+                            <td>Kolkata Knight Riders</td>
+                            <td>2342</td>
+                        </tr>
+                        <tr style="background-color: #dddddd">
+                            <td>Kings XI Punjab</td>
+                            <td>2634</td>
+                        </tr>
+                        <tr>
+                            <td>Mumbai Indians</td>
+                            <td>2967</td>
+                        </tr>
+                        <tr style="background-color: #dddddd">
+                            <td>Pune Warriors</td>
+                            <td>777</td>
+                        </tr>
+                        <tr>
+                            <td>Royal Challengers Bangalore</td>
+                            <td>2349</td>
+                        </tr>
+                        <tr style="background-color: #dddddd">
+                            <td>Rajasthan Royals</td>
+                            <td>2082</td>
+                        </tr>
+                        <tr>
+                            <td>Sunrisers Hyderabad</td>
+                            <td>1416</td>
+                        </tr>
+                </table>
 				</div>
 			</div>
 			<div class="row">
-                <table align="center" style="width:50%; background-color: white; text-align: center; border: 1px solid #dddddd; border-collapse: collapse;">
-                    <col width="50%">
-                    <col width="50%">
-                      <tr style="background-color: #dddddd">
-                        <th style="text-align:center;">Team1 Value</th>
-                        <th style="text-align:center;">Number of Instances</th> 
-                      </tr>
-                    <tr>
-                        <td>Chennai Super Kings</td>
-                        <td>2990</td>
-                    </tr>
-                    <tr style="background-color: #dddddd">
-                        <td>Deccan Chargers</td>
-                        <td>1679</td>
-                    </tr>
-                    <tr>
-                        <td>Delhi Daredevils</td>
-                        <td>2087</td>
-                    </tr>
-                    <tr style="background-color: #dddddd">
-                        <td>Gujarat Lions</td>
-                        <td>231</td>
-                    </tr>
-                    <tr>
-                        <td>Kolkata Knight Riders</td>
-                        <td>2342</td>
-                    </tr>
-                    <tr style="background-color: #dddddd">
-                        <td>Kings XI Punjab</td>
-                        <td>2634</td>
-                    </tr>
-                    <tr>
-                        <td>Mumbai Indians</td>
-                        <td>2967</td>
-                    </tr>
-                    <tr style="background-color: #dddddd">
-                        <td>Pune Warriors</td>
-                        <td>777</td>
-                    </tr>
-                    <tr>
-                        <td>Royal Challengers Bangalore</td>
-                        <td>2349</td>
-                    </tr>
-                    <tr style="background-color: #dddddd">
-                        <td>Rajasthan Royals</td>
-                        <td>2082</td>
-                    </tr>
-                    <tr>
-                        <td>Sunrisers Hyderabad</td>
-                        <td>1416</td>
-                    </tr>
-                </table>
+                
 			</div>
 		</div>
 	</div>
