more values added to table

--- a/index.html
+++ b/index.html
@@ -520,7 +520,15 @@
                         </tr>
                         <tr style="background-color: #dddddd">
                             <td>Deccan Chargers</td>
-                            <td></td>
+                            <td>87.27%</td>
+                            <td>Kolkata Knight Riders (16.4045)</td>
+                            <td>Kochi Tuskers Kerala (-22.958)</td>
+                        </tr>
+                        <tr>
+                            <td>Delhi Daredevils</td>
+                            <td>86.96%</td>
+                            <td>Rising Pune Supergiants (21.148)</td>
+                            <td>Pune Warriors (-22.4644)</td>
                         </tr>
                 </table>
 					</div>
